--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hhpvlatsig",
+  "name": "hvtg",
   "version": "1.0.0",
   "description": "* background-image * background-size * text  * font-family * convert to canvas",
   "main": "index.js",
